third_party/move/move-compiler-v2/tests/lambda/inline-parity/op_with_side_effect_49.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/op_with_side_effect_49.move:9:18
  │
9 │         x + call(|| {x = x + 1; x}) + call(|| {x = x + 7; x})
  │                  ^^^^^^^^^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/op_with_side_effect_49.move:9:44
  │
9 │         x + call(|| {x = x + 1; x}) + call(|| {x = x + 7; x})
  │                                            ^^^^^^^^^^^^^^^^^
